--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" type="image/svg+xml" href="https://png.pngtree.com/png-clipart/20220530/original/pngtree-back-to-school-circle-study-education-concept-vector-background-poster-png-image_7775099.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Titan Strikers</title>
   </head>
   <body>
     <div id="root"></div>
